--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,45 +1,8 @@
-inherit_gem:
-  rubocop-rails_config:
-    - config/rails.yml
+# Omakase Ruby styling for Rails
+inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 
-require: rubocop-performance
-
-AllCops:
-  NewCops: enable
-
-Performance:
-  Enabled: true
-
-Rails:
-  Enabled: true
-
-Rails/Pluck:
-  Enabled: false
-
-Rails/NegateInclude:
-  Enabled: false
-
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: single_quotes
-
-Style/FrozenStringLiteralComment:
-  Enabled: false
-
-Layout/LineLength:
-  Max: 80
-
-Layout/IndentationConsistency:
-  EnforcedStyle: normal
-
-Style/BlockDelimiters:
-  Enabled: true
-
-Rails/ApplicationRecord:
-  Enabled: false
-
-Rails/BelongsTo:
-  Enabled: false
-
-Rails/ApplicationController:
-  Enabled: false
+# Overwrite or add rules to create your own house style
+#
+# # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
+# Layout/SpaceInsideArrayLiteralBrackets:
+#   Enabled: false
