--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,9 @@ jobs:
 
     strategy:
       matrix:
-        ruby: ['3.1', '3.2', '3.3']
-        rails: ['6.1', '7.0.1']
+        ruby: ['3.3']
+        rails: ['8.0.1']
         experimental: [false]
-        include:
-          - rails: '7.1'
-            ruby: '3.3'
-            experimental: true
 
     steps:
     - uses: actions/checkout@v4
